--- a/static/style.css
+++ b/static/style.css
@@ -483,6 +483,18 @@ header {
   padding-bottom: 32px;
 }
 
+.card-del {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 24px;
+  margin-top: 24px;
+}
+
+.del {
+  color: #FFFFFF;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus {
